--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
             <div class='signup'>Sign Up</div>
             <div class='login'>Login</div>
         </div>
-      </div>
+      </div>   
     </div>
+      <div class="content">
+        <h1>
+          Czym jest Lorem Ipsum?
+        </h1>
+       
+          <p> <br>
+            Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
+          </p>
+        <h2>
+          Czym jest Lorem Ipsum?
+        </h2>
+        <p><br>
+          Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
+        </p>
+      </div>
+      <div class="footer">
+        <p>
+          <p>&copy; copyright by Mateusz ;) 2017!</p>
+        </p>
+      </div>
   </body>
 </html>
