--- a/index.html
+++ b/index.html
@@ -30,10 +30,22 @@
           Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
         </p>
       </div>
+      <div class="content2">
+      </div>
       <div class="footer">
         <p>
           <p>&copy; copyright by Mateusz ;) 2017!</p>
         </p>
       </div>
+
+      <script>
+        setTimeout(wakeUp, 3000);
+
+        function wakeUp() {
+          alert("MOJA PIERWSZA SAMODZIELNA STRONKA ;)");
+        }
+
+      </script>
+
   </body>
 </html>
