--- a/index.html
+++ b/index.html
@@ -6,29 +6,18 @@
     <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
-    <div class='menu-container'>
-      <div class='menu'>
-        <div class='date'>Aug 14, 2016</div>
-          <div class="links">
-            <div class='signup'>Sign Up</div>
-            <div class='login'>Login</div>
-        </div>
-      </div>   
+    <div class="header">
+      <div class="navbar">
+      <div class="menu">Menu</div>
+          <div class="home" style="background-color:darkgoldenrod">Home</div>
+          <div class="services">Services</div>
+          <div class="projects">Projects</div>
+          <div class="clients">Clients</div>
+          <div class="blog">Blog</div>
+          <div class="contact">Contact</div>
+    </div>   
     </div>
       <div class="content">
-        <h1>
-          Czym jest Lorem Ipsum?
-        </h1>
-       
-          <p> <br>
-            Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
-          </p>
-        <h2>
-          Czym jest Lorem Ipsum?
-        </h2>
-        <p><br>
-          Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
-        </p>
       </div>
       <div class="content2">
       </div>
@@ -37,15 +26,5 @@
           <p>&copy; copyright by Mateusz ;) 2017!</p>
         </p>
       </div>
-
-      <script>
-        setTimeout(wakeUp, 3000);
-
-        function wakeUp() {
-          alert("MOJA PIERWSZA SAMODZIELNA STRONKA ;)");
-        }
-
-      </script>
-
   </body>
 </html>
