--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="header">
       <div class="navbar">
       <div class="menu">Menu</div>
-          <div class="home" style="background-color:darkgoldenrod">Home</div>
+          <div class="home" style="background-color:#f3b00c">Home</div>
           <div class="services">Services</div>
           <div class="projects">Projects</div>
           <div class="clients">Clients</div>
