--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
           <div class="contact">Contact</div>
     </div>   
     </div>
-      <div class="content">
-      </div>
       <div class="content2">
       </div>
+    <div class="flex-container">
+      <div class="flex-item">flex item 1</div>
+      <div class="flex-item">flex item 2</div>
+      <div class="flex-item">flex item 3</div> 
+    </div>
       <div class="footer">
         <p>
           <p>&copy; copyright by Mateusz ;) 2017!</p>
