--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <div class="header">
       <div class="navbar">
-      <div class="menu">Menu</div>
+      <div class="menu"> 
+        Menu
+      </div>
           <div class="home" style="background-color:#f3b00c">Home</div>
           <div class="services">Services</div>
           <div class="projects">Projects</div>
