--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Your success. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font.
 
             Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​
-        </p>
+        </p><button>More..</button>
       </div>
       <div class="flex-item">
           <h1>OUR TEAM</h1>
@@ -37,6 +37,7 @@
 
               I’m a great place for you to write more. Tell a story and let your users get to know you.​​Click here to add your own text and edit me.
           </p>
+          <button>More..</button>
       </div>
       <div class="flex-item">
           <h1>OUR SOLUTIONS</h1>
@@ -45,12 +46,14 @@
               ​
               Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​
           </p>
+          <button>More..</button>
       </div> 
     </div>
       <div class="footer">
         <p>
           <p>&copy; copyright by Mateusz ;) 2017!</p>
         </p>
+        
       </div>
   </body>
 </html>
