--- a/index.html
+++ b/index.html
@@ -24,28 +24,31 @@
     <div class="flex-container">
       <div class="flex-item" style="text-align:left"!important>
         <h1>YOUR SUCCESS</h1>
-        <p>
-            Your success. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font.
+          <img src="js.png" alt="">
+            <p>
+              Your success. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font.
 
-            Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​
-        </p><button>More..</button>
-      </div>
+              Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​
+            </p><button>More..</button>
+        </div>
       <div class="flex-item">
-          <h1>OUR TEAM</h1>
-          <p>
+        <h1>OUR TEAM</h1>
+          <img src="html5.png" alt="">
+            <p>
               Meet our team. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page.
 
               I’m a great place for you to write more. Tell a story and let your users get to know you.​​Click here to add your own text and edit me.
-          </p>
+            </p>
           <button>More..</button>
       </div>
       <div class="flex-item">
           <h1>OUR SOLUTIONS</h1>
-          <p>
-              Solutions. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font.
-              ​
-              Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​
-          </p>
+            <img src="css3.png" alt="">
+            <p>
+                Solutions. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font.
+                ​
+                Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​
+            </p>
           <button>More..</button>
       </div> 
     </div>
