--- a/index.html
+++ b/index.html
@@ -4,24 +4,35 @@
     <meta charset='UTF-8'/>
     <title>Some Web Page</title>
     <link rel='stylesheet' href='styles.css'/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-    <div class="header">
-      <div class="navbar">
-      <div class="menu">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+      <a class="navbar-brand" href="#">Menu</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+              <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">O nas</a>
+              <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
       </div>
-          <div class="home" style="background-color:#f3b00c">Home</div>
-          <div class="services">Services</div>
-          <div class="projects">Projects</div>
-          <div class="clients">Clients</div>
-          <div class="blog">Blog</div>
-          <div class="contact">Contact</div>
-    </div>   
-    </div>
+    </nav>
       <div class="content2">
       </div>
     <div class="flex-container">
-      <div class="flex-item" style="text-align:left"!important>
+      <div class="flex-item" style="text-align:left">
         <h1>YOUR SUCCESS</h1>
           <img src="js.png" alt="">
             <p>
