--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
     <meta charset='UTF-8'/>
     <title>Some Web Page</title>
     <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='_navbar.scss'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="#">Menu</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(255, 242, 242, 0.27)">
+      <a class="navbar-brand" href="#" style="color: rgba(249, 3, 3, 0.9);">Menu</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" style="border-color: rgb(226, 15, 15);" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="#" style="color: rgba(249, 3, 3, 0.9);">Home
               <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#" style="color: rgba(249, 3, 3, 0.9);">Link</a>
               <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">O nas</a>
+            <a class="nav-link" href="#" style="color: rgba(249, 3, 3, 0.9);">O nas</a>
               <span class="sr-only">(current)</span></a>
           </li>
         </ul>
