--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
           <a class="navbar-brand" href="#">Menu</a>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <section class="dropdown show">
-              <a class="nav-item nav-link active dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Home <span class="sr-only">(current)</span>
-              </a>
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+           
+            <section class="dropdown hide">
+              <a class="nav-item nav-link active dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Service</a>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </section>
-              <a class="nav-item nav-link active" href="#">Service</a>
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </section>
+
               <a class="nav-item nav-link active" href="#">O nas</a>
               <a class="nav-item nav-link active" href="#">Kontakt</a>      
             </div>
