dodane komentarze i poprawione znaczniki

--- a/services.html
+++ b/services.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<!--NAVBAR-->
     <div class="myNavbar">
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,64 +40,75 @@
             </div>
         </nav>
     </div>
-        <div class="services">
-            <main class="container">
-                <article>
-                    <h1>SERVICES</h1>
-                </article> 
-                    <div class="columnContent">
-                        <section>
-                            <h2>Turn-Key Solution</h2>
-                                <mark class="article-info muted">Written by Me</mark>
-                                    <p>
-                                        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                                    </p>
-                                        <a href="#" class="label label-info">sample</a><br><br>
-                                            <button class="btn btn-warning">info</button>
-                        </section>
-                    </div>
-
-                    <div class="columnContent">
-                         <section>
-                             <h2>Unbeatable Support</h2>
-                                <mark class="article-info muted">Written by Me</mark>
-                                    <p>
-                                        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                                    </p>
-                                        <a href="#" class="label label-info">sample</a><br><br>
-                                            <button class="btn btn-warning">info</button>
-                        </section>
-                    </div>
-
-                    <div class="columnContent">
-                        <section>
-                            <div class="colImage">
-                                <img src="http://via.placeholder.com/350x150" alt="">
-                            </div>
-                                <h2>Responsive Design</h2>
-                                     <mark class="article-info muted">Written by Me</mark>
-                                        <p>
-                                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                                        </p>
-                                
-                                        <a href="#" class="label label-info">sample</a><br><br>
-                                            <button class="btn btn-warning">info</button>
-                        </section>
-                    </div>
-
-                    <div class="columnContent">
-                         <section>
-                            <h2>Smart Investment</h2>
-                                <mark class="article-info muted">Written by Me</mark>
-                                    <p>
-                                        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                                    </p>
-                                        <a href="#" class="label label-info">sample</a><br><br>
-                                            <button class="btn btn-warning">info</button>
-                        </section>
-                    </div>    
-                </div>
-            </main>
+<!--HEADER-->
+    <div class="services">
+        <main class="container">
+            <article class="heading">
+                <h1>SERVICES</h1>
+            </article> 
+<!--Kolumny-->
+    <div class="columnContent">
+        <div class="colImage">
+            <img src="http://via.placeholder.com/350x150" alt="">
         </div>
+            <section>
+                <h2>Turn-Key Solution</h2>
+                    <mark class="article-info muted">Written by Me</mark>
+                        <p>
+                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                        </p>
+                    <a href="#" class="label label-info">sample</a><br><br>
+                <button class="btn btn-warning">info</button>
+            </section>
+        </div>
+
+    <div class="columnContent">
+        <div class="colImage">
+            <img src="http://via.placeholder.com/350x150" alt="">
+        </div>
+            <section>
+                <h2>Unbeatable Support</h2>
+                    <mark class="article-info muted">Written by Me</mark>
+                        <p>
+                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                        </p>
+                    <a href="#" class="label label-info">sample</a><br><br>
+                <button class="btn btn-warning">info</button>
+            </section>
+        </div>
+
+    <div class="columnContent">
+        <div class="colImage">
+            <img src="http://via.placeholder.com/350x150" alt="">
+        </div>
+            <section>
+                <h2>Responsive Design</h2>
+                    <mark class="article-info muted">Written by Me</mark>
+                        <p>
+                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                        </p>
+                    <a href="#" class="label label-info">sample</a><br><br>
+                <button class="btn btn-warning">info</button>
+            </section>
+        </div>
+
+        <div class="columnContent">
+            <div class="colImage">
+                <img src="http://via.placeholder.com/350x150" alt="">
+            </div>
+            <section>
+                <h2>Smart Investment</h2>
+                    <mark class="article-info muted">Written by Me</mark>
+                        <p>
+                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                        </p>
+                    <a href="#" class="label label-info">sample</a><br><br>
+                <button class="btn btn-warning">info</button>
+            </section>
+                </div>  
+    <!--Kolumn-END-->  
+            </div>
+        </main>
+    </div>
 </body>
 </html>
