--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
               </section>
 
-          <footer class="container_footer">
+          <footer class="containerFooter">
               <p>&copy; copyright by Mateusz 2017!</p>
           </footer>
 
