nowe elem. na podtronie i poprawione bledy z navbarem z rana ;p

--- a/services.html
+++ b/services.html
@@ -43,71 +43,82 @@
 <!--HEADER-->
     <div class="services">
         <main class="container">
-            <article class="heading">
-                <h1>SERVICES</h1>
-            </article> 
-<!--Kolumny-->
-    <div class="columnContent">
-        <div class="colImage">
-            <img src="http://via.placeholder.com/350x280" alt="">
-        </div>
-            <section>
-                <h2>Turn-Key Solution</h2>
-                    <mark class="article-info muted">Written by Me</mark>
-                        <p>
-                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                        </p>
-                    <a href="#" class="label label-info">sample</a><br><br>
-                <button class="btn btn-warning">info</button>
-            </section>
-        </div>
 
-    <div class="columnContent">
-        <div class="colImage">
-            <img src="http://via.placeholder.com/350x280" alt="">
-        </div>
-            <section>
-                <h2>Unbeatable Support</h2>
-                    <mark class="article-info muted">Written by Me</mark>
-                        <p>
-                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                        </p>
-                    <a href="#" class="label label-info">sample</a><br><br>
-                <button class="btn btn-warning">info</button>
-            </section>
-        </div>
+    <div class="leftColumn">
 
-    <div class="columnContent">
-        <div class="colImage">
-            <img src="http://via.placeholder.com/350x280" alt="">
+        <div class="pageHeader">
+            <h1>SERVICES</h1>
         </div>
-            <section>
-                <h2>Responsive Design</h2>
-                    <mark class="article-info muted">Written by Me</mark>
-                        <p>
-                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                        </p>
-                    <a href="#" class="label label-info">sample</a><br><br>
-                <button class="btn btn-warning">info</button>
-            </section>
-        </div>
+<!--CONTENT-->
+        <div class="columnContent">
+            <div class="colImage">
+                <img src="http://via.placeholder.com/350x280" alt="">
+            </div>
+                <section>
+                    <h2>Turn-Key Solution</h2>
+                        <mark class="article-info muted">Written by Me</mark>
+                            <p>
+                                Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                            </p>
+                        <a href="#" class="label label-info">sample</a><br><br>
+                    <button class="btn btn-warning">info</button>
+                </section>
+            </div>
 
         <div class="columnContent">
             <div class="colImage">
                 <img src="http://via.placeholder.com/350x280" alt="">
             </div>
-            <section>
-                <h2>Smart Investment</h2>
-                    <mark class="article-info muted">Written by Me</mark>
-                        <p>
-                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
-                        </p>
-                    <a href="#" class="label label-info">sample</a><br><br>
-                <button class="btn btn-warning">info</button>
-            </section>
-                </div>  
-    <!--Kolumn-END-->  
+                <section>
+                    <h2>Unbeatable Support</h2>
+                        <mark class="article-info muted">Written by Me</mark>
+                            <p>
+                                Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                            </p>
+                        <a href="#" class="label label-info">sample</a><br><br>
+                    <button class="btn btn-warning">info</button>
+                </section>
             </div>
+
+        <div class="columnContent">
+            <div class="colImage">
+                <img src="http://via.placeholder.com/350x280" alt="">
+            </div>
+                <section>
+                    <h2>Responsive Design</h2>
+                        <mark class="article-info muted">Written by Me</mark>
+                            <p>
+                                Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                            </p>
+                        <a href="#" class="label label-info">sample</a><br><br>
+                    <button class="btn btn-warning">info</button>
+                </section>
+            </div>
+
+            <div class="columnContent">
+                <div class="colImage">
+                    <img src="http://via.placeholder.com/350x280" alt="">
+                </div>
+                <section>
+                    <h2>Smart Investment</h2>
+                        <mark class="article-info muted">Written by Me</mark>
+                            <p>
+                                Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.   
+                            </p>
+                        <a href="#" class="label label-info">sample</a><br><br>
+                    <button class="btn btn-warning">info</button>
+                </section>
+                    </div>  
+                        </div>
+        <!--leftColumn-END-->  
+
+        <div class="rightColumn"></div>
+
+         </div>
+
+  <!--righttColumn-END-->
+               
+  
         </main>
     </div>
 
