--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
               <h1>OUR TEAM</h1>
                 <img src="http://via.placeholder.com/350x150" alt="">
                 <section>
-                  <p1>Meet our team. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double      click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere       you like  on your page.
+                  <p1>
+                    Meet our team. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double      click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere       you like  on your page.
                   </p1>
                   <p2>
                     I’m a great place for you to write more. Tell a story and let your users get to know you.​​Click here to add your own text  and edit me.
@@ -129,8 +130,9 @@
               <section class="container">
                 <div class="content_store">
                   <h1>Online Store</h1>
-                    <p>These are the product that made our company famous.<br>
-                        Try it to simplify the way you're doing business. Visit our online store
+                    <p>
+                      These are the product that made our company famous.<br>
+                      Try it to simplify the way you're doing business. Visit our online store
                     </p>
                    <img src="http://via.placeholder.com/450x250" alt="">
                 </div>
