place holder w podstronie i RWD elementow

--- a/services.html
+++ b/services.html
@@ -112,8 +112,10 @@
                         </div>
         <!--leftColumn-END-->  
 
-        <div class="rightColumn"></div>
-
+        <div class="rightColumn">
+            <img src="http://via.placeholder.com/150x80" alt="">
+        </div>
+                
          </div>
 
   <!--righttColumn-END-->
