--- a/services.html
+++ b/services.html
@@ -113,7 +113,7 @@
         <!--leftColumn-END-->  
 
         <div class="rightColumn">
-            <img src="http://via.placeholder.com/150x80" alt="">
+            <img src="html5.png" alt="">
         </div>
                 
          </div>
