--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Nowa Stronka</title>
   </head>
   <body>
+    <!--NAVBAR-->
     <div class="myNavbar">
       <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +39,7 @@
           </div>
         </nav>
       </div>
+      <!--CAROUSEL-->
         <div class="carousel">
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -82,7 +84,7 @@
             </a>
           </div>
         </div>
-
+<!--FLEX-CONTAINER-->
         <main class="flex-container">
             <article class="flex-item">
               <h1>YOUR SUCCESS</h1>
@@ -126,7 +128,7 @@
                 <button type="button" class="btn btn-info">More..</button>
               </article>
             </main>
-
+<!--CONTAINER-->
               <section class="container">
                 <div class="content_store">
                   <h1>Online Store</h1>
