--- a/website/index.html
+++ b/website/index.html
@@ -16,23 +16,21 @@
  <!--NAVBAR-->
  <div class="myNavbar">
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<a class="navbar-brand" href="#">
-				<img src="img/logo.png">
-			</a>
-			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-				<div class="navbar-nav">
-						<a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-				<section class="dropdown hide">
-					<a class="nav-item nav-link active" href="#">O nas</a>
-					<a class="nav-item nav-link active" href="#">Oferta</a>
-					<a class="nav-item nav-link active" href="#">Kontakt</a>
-				</section>      
-				</div>
-			</div>
-		</nav>
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<a class="navbar-brand" href="#">
+		  <img src="http://via.placeholder.com/70x70">
+		</a>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		  <div class="navbar-nav">
+			  <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+			<a class="nav-item nav-link active" href="#">O nas</a>
+			<a class="nav-item nav-link active" href="#">Oferta</a>
+			<a class="nav-item nav-link active" href="#">Kontakt</a>      
+		  </div>
+		</div>
+	  </nav>
 	</div>
 <!--NAVBAR END -->
 
