--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
 		  <span class="navbar-toggler-icon"></span>
 		</button>
 		<a class="navbar-brand" href="#">
-		  <img src="http://via.placeholder.com/70x70">
+		  <img src="img/logo.png">
 		</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		  <div class="navbar-nav">
@@ -34,7 +34,7 @@
 	</div>
 <!--NAVBAR END -->
 
-<div id="photos">
+<div id="photos" class="container-fluid">
 	<ul id="photo-gallery">
 	  <li>
 		<a href="https://41.media.tumblr.com/0390d80d6c8cc4a7096033182a4bfe8a/tumblr_ndyvukSjNl1tubinno1_1280.jpg">
