poprawki styli ogolnie

--- a/website/index.html
+++ b/website/index.html
@@ -84,8 +84,45 @@
   </div>
 <!--GALLERY END -->
 
+<!--BOX-->
+<main class="flex-container">
+	<article class="flex-item">
+		<h1>YOUR SUCCESS</h1>
+			<img src="http://via.placeholder.com/350x150" alt="">
+			<section>
+				<aside>
+					<p1>Your success. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font.</p1>
+					<p1>Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​</p1>
+				</aside>
+			</section>
+		<button type="button" class="btn btn-info"><span>More </span></button>
+	</article>
 
-
+	<article class="flex-item">
+		<h1>OUR TEAM</h1>
+			<img src="http://via.placeholder.com/350x150" alt="">
+			<section>
+				<aside>
+					<p1>Meet our team. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like  on your page.</p1>
+					<p1>I’m a great place for you to write more. Tell a story and let your users get to know you.​​Click here to add your own text  and edit me.</p1>
+			</aside>
+			</section>
+		<button type="button" class="btn btn-info"><span>More </span></button>
+	</article>
+		
+		<article class="flex-item">
+			<h1>OUR SOLUTIONS</h1>
+					<img src="http://via.placeholder.com/350x150" alt="">
+				<section>
+					<aside>
+						<p1>Solutions. I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font.</p1>
+						<p1>Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.​</p1>
+					</aside>
+				</section>
+			<button type="button" class="btn btn-info"><span>More </span></button>
+		</article>
+	</main>
+<!--BOX END-->
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
